<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="8dp">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <TextView
        android:textColor="@color/colorPrimaryDark"
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/ivProfile"
        android:padding="5dp"
        android:text="Rajeev Ranjan" />

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvName"
        android:layout_toRightOf="@+id/ivProfile"
        android:padding="5dp"
        android:text="rajeev@gmail.com"
        android:textAppearance="@style/TextAppearance.AppCompat.Small" />
    <View
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_below="@+id/ivProfile"
        android:background="@color/cardview_dark_background"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

</RelativeLayout>
