...
            android:gravity="center"
            android:padding="16dp"
            android:text="Select UPI App"
            android:textColor="@color/colorPrimaryDark" />

        <androidx.recyclerview.widget.RecyclerView
            android:layout_above="@+id/btnPay"
            android:id="@+id/rvUpiApp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvTitle" />

        <Button
...
